--- a/content/en/posts/leetcode/动态规划/最长回文子串.md
+++ b/content/en/posts/leetcode/动态规划/最长回文子串.md
@@ -1,11 +1,99 @@
 ---
 title: "最长回文子串"
 date: 2023-10-12T17:37:48+08:00
-tags: ["题解"]
 categories: ["题解"]
+tags: ["动态规划"]
 draft: false
-password: test
 ---
+
+## 题目描述[^1]
+
+## 代码
+
+{{< codes c java python >}}
+  {{< code >}}
+  ```c
+#include <iostream>
+#include <vector>
+#include <string>
+
+using namespace std;
+
+class Solution {
+public:
+    string longestPalindrome(string s) {
+        unsigned int n = s.size();
+        if (n < 2) {
+            return s;
+        }
+        int maxLen = 1, begin = 0;
+        /**
+         * 状态: dp[i][j] : 子串s[i....j] 是否是回文串.
+         * 状态转移方程: dp[i][j] = (s[i] == s[j]) 并且 dp[i+1][j-1]
+         * 边界条件:
+         */
+
+        vector<vector<int>> dp(n, vector<int>(n));
+        // 单个的字符是回文串
+        for(int i = 0; i < n; i++) {
+            dp[i][i] = true;
+        }
+        // 枚举子字符串串长度,通过扩大子字符串的长度寻找回文串.
+        for (int L = 2; L <= n; L++) {
+            // 左边界
+            for (int i = 0; i < n; i++) {
+                // 右边界 (j - i + 1 = L)
+                int j = L + i - 1;
+                // 右边界越界
+                if (j >= n) {
+                    break;
+                }
+                // 子字符串的左右两边不相等
+                if (s[i] != s[j]) {
+                    dp[i][j] = false;
+                } else {
+                    // 达到边界条件
+                    if (j - i < 3) {
+                        dp[i][j] = true;
+                    } else {
+                        dp[i][j] = dp[i+1][j-1];
+                    }
+                }
+                // 子串是回文,更新回文字符串长度和起始位置.
+                if (dp[i][j] && j - i + 1 > maxLen) {
+                    maxLen = j - i + 1;
+                    begin = i;
+                }
+            }
+        }
+        return s.substr(begin, maxLen);
+    }
+};
+
+int main() {
+    Solution solution;
+    string s = "bacad";
+    string result = solution.longestPalindrome(s);
+    cout<< result << endl;
+}
+  ```{{< /code >}}
+  {{< code >}}
+  ```java
+  func main(){
+    fmt.Printf("Hello World~")
+    return
+  }
+  ```{{< /code >}}
+  {{< code >}}
+  ```python
+  def main():
+      print("Hello World~")
+      return
+  ```{{< /code >}}
+  {{< /codes >}}
+
+## 链接
+[^1]:最长回文子串[https://leetcode.cn/problems/longest-palindromic-substring/description/](https://leetcode.cn/problems/longest-palindromic-substring/description/)
 
 
 
