--- a/content/en/posts/csharp/委托与事件.md
+++ b/content/en/posts/csharp/委托与事件.md
@@ -1,18 +1,16 @@
 ---
-title: "委托"
+title: "委托与事件"
 date: 2023-11-18T11:39:32+08:00
 categories: ["csharp"]
 draft: false
 ---
-
-# 委托 与 事件
 
 ## 概述
 - 委托是引用类型, 委托有引用和对象, 委托类型必须在被用来创建变量以及类型的对象之前声明.
 - 委托声明与方法声明相似, 只是没有实现块. 委托不需要在类内部声明.
 - 委托可以看成一个包含有序方法列表的对象, 其包含的方法具有相同的签名和返回类型.
 
-## 委托示例
+#### 委托示例
 {{< codes 没有参数和返回值的委托类型 调用带返回值的委托 调用带引用参数的委托 >}}
 {{< code >}}
 ```C#
