--- a/content/en/posts/csharp/接口.md
+++ b/content/en/posts/csharp/接口.md
@@ -5,13 +5,11 @@ categories: ["csharp"]
 draft: false
 ---
 
-# 接口
-
 ## 概述
 - 接口是指定一组函数成员而不实现它们的引用类型,只能使用类和结构来实现接口.
 - 接口可以有访问修饰符,接口成员不能有访问修饰符.
 
-## 接口实例
+#### 接口实例
 {{< codes 多个接口的引用 派生成员实现接口 >}}
 
 {{< code >}}
