--- a/content/en/posts/csharp/协变与逆变.md
+++ b/content/en/posts/csharp/协变与逆变.md
@@ -58,7 +58,9 @@ class Program
 {{< /code >}}
 
 ## 接口的逆变与协变
-#### 协变学习
+#### 代码示例
+{{< codes 协变 逆变 >}}
+{{< code >}}
 ```C#
 interface IFoo<out T>
 {
@@ -88,7 +90,8 @@ class Program
     }
 }
 ```
-#### 逆变学习
+{{< /code >}}
+{{< code >}}
 ```C#
 interface IFoo<in T>
 {
@@ -117,7 +120,8 @@ class Program
     }
 }
 ```
-
+{{< /code >}}
+{{< /code >}}
 
 
 #### 代码示例
